--- a/Berners Street .html
+++ b/Berners Street .html
@@ -630,7 +630,7 @@ Lance: “You dirty old creep! It was you! You ordered me to them and now you’
 The Engraver wants to say something but gets surprised by the strong hit of the photographers fist. He falls face down to the floor, two knocked out teeth lay in a pool of blood. He wants to crawl away but the photographer starts to kick his body.
 The coachman tries to calm him down but gets also hit very badly. He runs away, rumples on doors and windows of the neighbours and screams for help.
 The photographer still beats the old engraver, while some neighbours run out of their doors and try to stop the photographer. A young man accidentally hits an elder neighbour who immediately takes revenge by taking a big camera from the carriage and smashes it towards his head. There is blood on the street. Of course someone called the police
-&lt;&lt;set $tumult += 20&gt;&gt;
+&lt;&lt;set $tumult += 25&gt;&gt;
 
 &lt;&lt;else&gt;&gt;
 8 o’clock, saturday morning, the Berners Street just awakes from a peaceful sleep. Some early birds are whistling and flying from roofs to trees and back. A little cat crosses slowly the street, a stray dog exactly observes her but is obviously too tired to attack.
@@ -1032,7 +1032,7 @@ Priest: LIES - all LIES! God won’t forget your blasphemy!!
 
 The policemen immediately run towards the priest blowing their police whistles, causing more people to watch the scene. They detain the priest and start to interrogate him.
 The nuns disappeared in all this rumble in a sidealley.
-&lt;&lt;set $tumult += 18&gt;&gt;
+&lt;&lt;set $tumult += 23&gt;&gt;
 &lt;&lt;else&gt;&gt;
 Benjamin Waters, the Priest arrives at the street. As he moves to his destination he gets greeted by the people with respect passing by. However, before arriving at the House a gang of young kids, mostly boys gather around him and start teasing him. they try to steal his suitcase and pull on his black clothes. At first the priest acted as if nothing happens while the pedestrians on the street watch the situation from a far. Suddenly, the holy Man loses his temper and and curses the lord in a shouting manner. the people, especially the women are shocked at his outrage. they will not forget that.
 &lt;&lt;set $tumutl +=6&gt;&gt;
@@ -1243,7 +1243,7 @@ What are you going to do George, shoot me? “ he replies with an arrogant voice
  
 That is exactly what I am going to do George. With a red head George opens his briefcase and presents the duel pistols to Hans. It is time we settle this once and for all George. I challenge you to a Duel! As he dropped the word duel, silence overtook the street. people stopped chattering and gathered around Hans and George. “So, Hans, do you accept or are you too afraid?” “So be it” replied Hans, with these words both of them started preparing the weapons for the duel, they get in to position, one of the crowd steps forward and presents his handkerchief. Both parties aim their loaded pistols to the side “when the handkerchief touches the floor you shall fire” announced the man before he let go of the piece of cloth. The moment it touched the ground. Both pistols fire nearly simultaneously. the loud noise
 causes everyone to freeze in place, George Attling falls to the ground while his opponent the German inventor Hans stands untouched in shock. The crowd around them splits in two and run to the aid of the two duellists “He is dead” shouts one of the bystanders. Quickly Hans and a big part of the crowd leaves the street as the police arrives to the scene.
-&lt;&lt;set $tumult += 24&gt;&gt;
+&lt;&lt;set $tumult += 26&gt;&gt;
 &lt;&lt;else&gt;&gt;
 As George Attling arrives at the street with his package he walks up to the house. 
 
@@ -1298,7 +1298,7 @@ Victor: Your ancestors were probably burned on the stake for being accused for w
 Dave: WAIT I’M GONNA TEACH YOU THE UNLIMITED POWER OF MY DRUGS!!  I’M GONNA SEND YER UGLY FACE STRAIGHT TO HELL! 
 
 Dave takes two more glasses out of his backpack and throws one of them at the cart filled with rugs. The alcoholic fluid distributes fast on the burning street and immediately catches fire. Victor tries desperately to save his rugs from the fire and manages to pull one of the rugs from the cart. During this brief moment, Dave throws another bottle - it hits Victor on the head, shatters and he falls on the street unconscious. The Second bottle sprayed the mixture all over Victor’s body and he too starts burning. Several people watching the scene start screaming for the police and the firefighters. But it’s already too late. After a few minutes the only remains of Victor are a black burned bread-like corpse on the ground next to his cart. Dave used the turmoil to escape safely in a sidealley. 
-&lt;&lt;set $tumult += 20&gt;&gt;
+&lt;&lt;set $tumult += 25&gt;&gt;
 &lt;&lt;else&gt;&gt;
 Suddenly a man pulling a cart full of carpets comes around the corner. As he reaches the entrance of number 54, he stops, carefully releases the cart, pulls off his hat, bows to the crowd and shouts:
 
@@ -1349,7 +1349,7 @@ Herlock reaches his hand behind his back and takes out handcuffs. O&#39;Flanniga
 // CALL A DOCTOR!! // 
 Herlock groans in pain and holds his chest, which is covered in blood while Shamous still lies motionless on the ground.
 
-&lt;&lt;set $tumult += 23&gt;&gt;</tw-passagedata><tw-passagedata pid="76" name="Detective" tags="" position="4363,1532" size="100,100">As you pass by the many rundown buildings in Reekstreet, you suddenly feel something on your shoulder. You turn around and look into the face of a man in his thirties, with a dark beard and horn-rimmed spectacles. He looks at you with a worn out look.
+&lt;&lt;set $tumult += 26&gt;&gt;</tw-passagedata><tw-passagedata pid="76" name="Detective" tags="" position="4363,1532" size="100,100">As you pass by the many rundown buildings in Reekstreet, you suddenly feel something on your shoulder. You turn around and look into the face of a man in his thirties, with a dark beard and horn-rimmed spectacles. He looks at you with a worn out look.
 
 [[Approch Him]]</tw-passagedata><tw-passagedata pid="77" name="Normal Reek Street Text" tags="" position="4327,1773" size="100,100">The People are as shady as this Street is.</tw-passagedata><tw-passagedata pid="78" name="Approch Him" tags="" position="4118,1339" size="100,100">//Excuse me sir, I never saw you here in this area - and as I can see you are a servant to someone. Your clothes are too expensive for a day laborer and too cheap for a  businessman. Your shoe soles have been replaced already 2 times, you must walk around a lot, yet your posture tells me that you trained yourself to keep your back up straight. You see this?//
 He points at your left forearm.
@@ -1374,13 +1374,14 @@ He walks away and disappears in the next alley.
 
 [[I’m not gonna tell you more than this: Go to 54 Bernerstreet on [enter Date and time]. He will be there. He always carries a gun and a knife. Be prepared! I have to go now -  my master is waiting...-&gt;DealDetective]]</tw-passagedata><tw-passagedata pid="82" name="DealDetective" tags="" position="4388,1136" size="100,100">//Hmmmm… I don’t know if I can trust you in this matter. I will think about this throughly. If i don’t have any clue until [enter date] , I will maybe show up at 54 Berners street.//
 &lt;&lt;set $detective to true&gt;&gt;
-[[Return to the Street-&gt;Reek Street]] </tw-passagedata><tw-passagedata pid="83" name="With pleasure." tags="" position="2851,1989" size="100,100">Well, as you can see, there is a wide selection. Do you have any favourites? Colors? Patterns? Size?
+[[Return to the Street-&gt;Reek Street]] </tw-passagedata><tw-passagedata pid="83" name="With pleasure." tags="" position="2909.3333333333335,1990.6666666666667" size="100,100">Well, as you can see, there is a wide selection. Do you have any favourites? Colors? Patterns? Size?
 
 [[Hard to say. My employer, Mrs. Tottenham wants to replace all the rugs in her house. The current ones are very old and used. We need different colors and sizes. I think the best way to find out would be if you could visit us.-&gt;Replace Rugs]]
 
+[[I need a really big blue rug with dense pattern. Have you got something like that?-&gt;Big Rug]]
 
 [[Oh I have to leave.-&gt;Blocksford Street]]
-</tw-passagedata><tw-passagedata pid="84" name="Replace Rugs" tags="" position="2675,2016" size="100,100">Sounds like a big job! Well, as i said, i am very busy at the moment. I could visit the Lady at monday, but we have to agree a down payment of 16£.
+</tw-passagedata><tw-passagedata pid="84" name="Replace Rugs" tags="" position="2640,2004.3333333333333" size="100,100">Sounds like a big job! Well, as i said, i am very busy at the moment. I could visit the Lady at monday, but we have to agree a down payment of 16£.
 
 &lt;&lt;if $money lt 16&gt;&gt;
 [[I don&#39;t have enough money... Goodbye Sir-&gt;Blocksford Street]] 
@@ -1615,7 +1616,7 @@ Just as you touch a beautiful small patterned red rug, somebody suddenly tapps o
 
 Hey, what’s the keyword?
 
-[[Excuse me?-&gt;What Keyword?]]</tw-passagedata><tw-passagedata pid="113" name="What Keyword?" tags="" position="2761,2237" size="100,100">The keyword for.. you know.. C’mon, i bet you’re not here for carpets!
+[[Excuse me?-&gt;What Keyword?]]</tw-passagedata><tw-passagedata pid="113" name="What Keyword?" tags="" position="2731,2248.6666666666665" size="100,100">The keyword for.. you know.. C’mon, i bet you’re not here for carpets!
 
 The keyword for what?
 
@@ -1630,7 +1631,7 @@ Are you sure about that?
 Rumors, just rumors! But i believe them! I saw people leaving the store with very heavy rugs! Too heavy! The must be a lot of other stuff rolled in. Anyway.. nevermind..
 
 He turns around and vanishes into the crowd. You are a little confused, walk around the store and meet again Mr. Weapunder.
-
+&lt;&lt;set $rugdealer_intel to true&gt;&gt;
 Can i help you now, Sir?
 
 [[With pleasure.]]
@@ -1698,4 +1699,48 @@ filled with agitation; and an aggressive mood seems to take hold of the people w
 And the droning noise of discussions everywhere, yes, you can feel it. This is absolute chaos!
 </tw-passagedata><tw-passagedata pid="122" name="Tumult Overdone" tags="" position="3990.0000000000005,3520.0000000000005" size="100,100">You start trembling when looking at 
 the street. Violent mayhem. You feel your face paling; and start heavily worrying.
-</tw-passagedata><tw-passagedata pid="123" name="Tumult 0" tags="" position="4111.666666666667,2733.3333333333335" size="100,100">Most literally, nothing is happening. Like, absolute lull.</tw-passagedata></tw-storydata>
+</tw-passagedata><tw-passagedata pid="123" name="Tumult 0" tags="" position="4111.666666666667,2733.3333333333335" size="100,100">Most literally, nothing is happening. Like, absolute lull.</tw-passagedata><tw-passagedata pid="124" name="Big Rug" tags="" position="2946,2340.666666666667" size="100,100">Any kind of blue, any kind of patterns! Best quality, best price! Let me show you!
+
+He tugs at your sleeve and cuts his way through the crowd to a huge stack of blue rugs. Talking to himself he starts rummage the stack and finally pulls out a couple of big rugs.
+
+Is this what you are looking for, Sir?
+
+[[Yes! That one! That’s it! How much?-&gt;Buy Rug]]
+&lt;&lt;if $rugdealer_intel is true&gt;&gt;
+[[hmmm.. it’s pretty but i need a bigger one. You know.. a heavy one. Really heavy, if you know what i mean..-&gt;Drugs]]
+&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="125" name="Buy Rug" tags="" position="2689.3333333333335,2459.0000000000005" size="100,100">Just 16£ today! Delivery is included, of course!
+&lt;&lt;if $money gte 16&gt;&gt;
+[[ Alright. Could you deliver on Monday 11 o&#39;clock at 54 Berners Street? -&gt;DealRugdealer]]
+&lt;&lt;/if&gt;&gt;
+[[What? Were these rugs woven with caviar extract by nude virgins in Walhalla?-&gt;Cheaper Rug]]
+</tw-passagedata><tw-passagedata pid="126" name="Drugs" tags="" position="2944.3333333333335,2499" size="100,100">Eehm.. I think this must be one of the biggest in my selection. Anyway, why should it be heavy?. This makes no sense to me..
+
+Maybe the carpet is not that important but the weight.
+
+I can’t follow you, Sir..
+
+I just like heavy carpets. I like heavy furniture in general. Heavy furniture with heavy stuff in it, that’s my taste.
+
+I think i understand.. You really like heavy carpets..
+
+I love heavy carpets. Especially when they are rolled up. I’m sure you know what i mean.
+
+The gentleman comes closer to you and whispers:
+
+I know exactly what you mean, i have tons of new stuff from Casablanca. Superior Quality. 16£, delivering is included. You just have to tell my where and when..
+
+[[Saturday,11 o’clock, Berners Street 54. Bring a really heavy one!-&gt;DealRugdealer]]
+
+
+</tw-passagedata><tw-passagedata pid="127" name="Cheaper Rug" tags="" position="2354.3333333333335,2320.666666666667" size="100,100">You Sir have no idea of the origin of these high quality rugs! Don’t be ridiculous!
+
+&lt;&lt;linkappend &quot;I’m sorry, what was the price again?&quot;&gt;&gt;
+12 £, no alternative, no dealing!
+&lt;&lt;if $money gte 12&gt;&gt;
+&lt;&lt;link &quot;Great, Monday, 11 o&#39;clock, 54 Berners Street. Alright?&quot;&gt;&gt;
+  &lt;&lt;goto &quot;DealRugdealer&quot;&gt;&gt;
+  &lt;&lt;set $rugdealer_pricecheap to 1&gt;&gt;
+&lt;&lt;/link&gt;&gt;
+&lt;&lt;/if&gt;&gt;
+[[You are ridiculous! And your prices!-&gt;Blocksford Street]]
+&lt;&lt;/linkappend&gt;&gt;</tw-passagedata></tw-storydata>
